zacetek strani, bottle ne dela

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "Python2",
             "type": "shell",
-            "command": "python -i \\\\\"${file}\\\\\"",
+            "command": "python -i \\\"${file}\\\"",
         }
     ]
 }
